# vers

./: CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-documentation.yml
crates/vers-asset/: Cargo.toml
crates/vers-audio/: Cargo.toml
crates/vers-audio/tests/: audio_tests.rs
crates/vers-core/: Cargo.toml
crates/vers-engine/: Cargo.toml
crates/vers-engine/src/: lib.rs
crates/vers-platform/: Cargo.toml
crates/vers-renderer/: Cargo.toml
crates/vers-renderer/src/vulkan/: command.rs  device.rs  entry.rs  framebuffer.rs  instance.rs  mod.rs  physical_device.rs  render_pass.rs  renderer.rs  surface.rs  swapchain.rs  sync.rs
crates/vers-tools/: Cargo.toml
crates/vers-tools/src/: lib.rs
crates/vers-tools/src/system_info/: env.rs  error.rs  gpu.rs  mod.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
scripts/unix/linux/: install-vulkansdk.sh
scripts/windows/: install-vulkansdk.ps1
