[workspace]
members = [
    "crates/*",
    "examples/*"
]
resolver = "3"

[workspace.package]
version = "0.0.1"
description = "3D engine"
edition = "2024"
authors = []
readme = "README.md"
license = ""
license-file = "LICENSE.md"
homepage = ""
repository = "https://github.com/"
documentation = ""
keywords = []
include = []
exclude = []
publish = false
rust-version = "1.93.0"

[workspace.dependencies]

vers-engine = { path = "crates/vers-engine" }

vers-asset = { path = "crates/vers-asset" }
vers-audio = { path = "crates/vers-audio" }
vers-core = { path = "crates/vers-core" }
vers-platform = { path = "crates/vers-platform" }
vers-renderer = { path = "crates/vers-renderer" }
vers-tools = { path = "crates/vers-tools" }

ash = "0.38.0"
ash-window = "0.13.0"
gpu-allocator = "0.28.0"
raw-window-handle = "0.6.2"
sysinfo = "0.38.4"
thiserror = "2.0.18"
winit = "0.30.13"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
