[package]
name = "vers-core"
version = "0.0.1"
description = ""
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
include.workspace = true
exclude.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]

[dev-dependencies]

[lints]
workspace = true
