[package]
name = "vers-engine"
version = "0.0.1"
description = ""
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
include.workspace = true
exclude.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]

vers-asset.workspace = true
vers-audio.workspace = true
vers-core.workspace = true
vers-platform.workspace = true
vers-renderer.workspace = true
vers-tools.workspace = true

[dev-dependencies]

[lints]
workspace = true
