[package]
name = "vers-renderer"
version = "0.0.1"
description = ""
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
include.workspace = true
exclude.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]

ash = { workspace = true, features = ["linked"] }
ash-window.workspace = true
raw-window-handle.workspace = true
winit.workspace = true
thiserror.workspace = true

[dev-dependencies]

[lints]
workspace = true
